--- a/CodeFirst/appsettings.json
+++ b/CodeFirst/appsettings.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "Default": "Server=.\\SQLEXPRESS;Database=CodeFirst;Trusted_Connection=true;TrustServerCertificate=True"
   },
-  "AllowedHosts": "*"
+  
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
 }
