--- a/CodeFirst/appsettings.json
+++ b/CodeFirst/appsettings.json
@@ -1,13 +1,13 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=.\\SQLEXPRESS;Database=CodeFirst;Trusted_Connection=true;TrustServerCertificate=True"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=PatikaCodeFirstDb1;Trusted_Connection=true;TrustServerCertificate=True"
   },
-  
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
